--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8080
 # Database Configuration (PostgreSQL)
 spring.datasource.url=jdbc:postgresql://localhost:5432/travelmate_db
 spring.datasource.username=postgres
-spring.datasource.password=alexis
+spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate Configuration
