Add Details Change Java 21-17

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8080
 # Database Configuration (PostgreSQL)
 spring.datasource.url=jdbc:postgresql://localhost:5432/travelmate_db
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=alexis
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate Configuration
@@ -35,6 +35,6 @@ cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 cors.allowed-headers=*
 cors.allow-credentials=true
 
-# Aumentar límite de tamaño de archivos
+# Aumentar limite de tamano de archivos
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
